[gd_scene format=3 uid="uid://dayefv6yyr2we"]

[ext_resource type="Script" uid="uid://cyncm32qdovi5" path="res://scripts/start_screen.gd" id="1_flm04"]
[ext_resource type="Shader" uid="uid://ln6lbywvvfpg" path="res://vfx/shaders/noise_overlay.gdshader" id="2_noise"]
[ext_resource type="Shader" uid="uid://dhadmbmmq8yam" path="res://vfx/shaders/text_wave.gdshader" id="3_textwave"]
[ext_resource type="Shader" uid="uid://4pebuow4tlly" path="res://vfx/shaders/text_glitch.gdshader" id="4_glitch"]
[ext_resource type="Script" uid="uid://bmcgo83lvtab3" path="res://vfx/scripts/text_glitch_controller.gd" id="5_glitchctrl"]
[ext_resource type="Script" uid="uid://cht1ki2v86vlx" path="res://vfx/scripts/falling_masks.gd" id="6_falling"]
[ext_resource type="Texture2D" uid="uid://c8bmxnyewq4dg" path="res://DownloadedAssets/mask1.jpeg" id="7_mask1"]
[ext_resource type="Texture2D" uid="uid://d3be3dfhyv6x" path="res://DownloadedAssets/mask2.jpeg" id="8_mask2"]
[ext_resource type="Texture2D" uid="uid://cv846cdytq6gq" path="res://DownloadedAssets/mask3.jpeg" id="9_mask3"]
[ext_resource type="Texture2D" uid="uid://db784i0sxadqt" path="res://DownloadedAssets/mask4.jpeg" id="10_mask4"]
[ext_resource type="Texture2D" uid="uid://bhbndngfb81b" path="res://DownloadedAssets/mask5.jpeg" id="11_mask5"]
[ext_resource type="Texture2D" uid="uid://byvahh2c55xjt" path="res://DownloadedAssets/mask6.jpeg" id="12_mask6"]
[ext_resource type="Texture2D" uid="uid://bb3cg7fo5vu5n" path="res://DownloadedAssets/mask7.jpeg" id="13_mask7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_noise"]
shader = ExtResource("2_noise")
shader_parameter/color_a = Color(0.05, 0.08, 0.15, 1)
shader_parameter/color_b = Color(0.15, 0.08, 0.2, 1)
shader_parameter/color_c = Color(0.08, 0.05, 0.12, 1)
shader_parameter/use_three_colors = true
shader_parameter/noise_scale = 6.0
shader_parameter/speed = 0.15
shader_parameter/contrast = 1.3
shader_parameter/opacity = 1.0
shader_parameter/output_dissolve_mask = false
shader_parameter/dissolve_edge_width = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_title"]
shader = ExtResource("3_textwave")
shader_parameter/wave_intensity = 2.5
shader_parameter/wave_speed = 1.5
shader_parameter/wave_frequency = 3.0
shader_parameter/vertical_wave = true
shader_parameter/horizontal_wave = false
shader_parameter/enable_rainbow = true
shader_parameter/rainbow_speed = 0.3
shader_parameter/rainbow_saturation = 0.6
shader_parameter/base_color = Color(1, 1, 1, 1)
shader_parameter/enable_dissolve = false
shader_parameter/dissolve_progress = 0.0
shader_parameter/dissolve_edge_width = 0.1
shader_parameter/dissolve_edge_color = Color(0.9, 0.3, 0.6, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_glitch"]
shader = ExtResource("4_glitch")
shader_parameter/enable_glitch = true
shader_parameter/glitch_intensity = 0.5
shader_parameter/glitch_frequency = 2.0
shader_parameter/glitch_block_size = 0.05
shader_parameter/enable_jitter = true
shader_parameter/jitter_amount = 4.0
shader_parameter/enable_scanlines = true
shader_parameter/scanline_count = 25.0
shader_parameter/scanline_offset_max = 0.015
shader_parameter/enable_rgb_split = true
shader_parameter/rgb_split_amount = 2.5
shader_parameter/base_color = Color(0.85, 0.75, 0.95, 1)
shader_parameter/glitch_color_1 = Color(0.592157, 0.27451, 0.584314, 1)
shader_parameter/glitch_color_2 = Color(0.3, 0.8, 0.9, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r03hu"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 16
shadow_color = Color(0, 0, 0, 0.360784)
shadow_size = 1
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ng4jn"]
bg_color = Color(0.592157, 0.27451, 0.584314, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.592157, 0.27451, 0.584314, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 16
shadow_color = Color(0, 0, 0, 0.360784)
shadow_size = 1
shadow_offset = Vector2(1, 1)

[node name="StartScreen" type="Control" unique_id=346368954]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flm04")
level_files = Array[String](["uid://bgfvqywk203e4", "uid://p141l5aalrcj", "uid://n2lahx5r8vxh", "uid://cto3570fpcl81", "uid://bx2awqxvnahys"])

[node name="NoiseBackground" type="ColorRect" parent="." unique_id=1382966985]
material = SubResource("ShaderMaterial_noise")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FallingMasks" type="Control" parent="." unique_id=1277181796]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("6_falling")
mask_textures = Array[Texture2D]([ExtResource("7_mask1"), ExtResource("8_mask2"), ExtResource("9_mask3"), ExtResource("10_mask4"), ExtResource("11_mask5"), ExtResource("12_mask6"), ExtResource("13_mask7")])
mask_count = 15
fall_speed_min = 40.0
fall_speed_max = 120.0
sway_amount = 25.0
sway_speed = 1.5
rotation_speed_max = 0.3
scale_min = 0.24
scale_max = 0.6
opacity_min = 0.15
opacity_max = 0.4

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=313762823]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=706244961]
layout_mode = 2

[node name="TitleContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=738279468]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="GameTitle" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer" unique_id=67074831]
material = SubResource("ShaderMaterial_title")
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 72
text = "MASK KING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GlitchController" type="Control" parent="MarginContainer/VBoxContainer/TitleContainer" unique_id=1181994509]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
script = ExtResource("5_glitchctrl")
auto_glitch = true
auto_glitch_duration = 0.2

[node name="Subtitle" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer/GlitchController" unique_id=1324649279]
material = SubResource("ShaderMaterial_glitch")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.85, 0.75, 0.95, 1)
theme_override_font_sizes/font_size = 24
text = "GET RICH OR CAUGHT TRYING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer" unique_id=1083550656]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ButtonsContainer" unique_id=10630390]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer/Buttons" unique_id=132437384]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_r03hu")
theme_override_styles/hover = SubResource("StyleBoxFlat_ng4jn")
text = "Play"

[node name="LevelButtonsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ButtonsContainer/Buttons" unique_id=540754703]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer/Buttons" unique_id=792994229]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_r03hu")
theme_override_styles/hover = SubResource("StyleBoxFlat_ng4jn")
text = "Continue"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer/Buttons" unique_id=1723596936]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_r03hu")
theme_override_styles/hover = SubResource("StyleBoxFlat_ng4jn")
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer/Buttons" unique_id=1696775513]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_r03hu")
theme_override_styles/hover = SubResource("StyleBoxFlat_ng4jn")
text = "Quit"

[connection signal="button_up" from="MarginContainer/VBoxContainer/ButtonsContainer/Buttons/Play" to="." method="_on_play_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/ButtonsContainer/Buttons/Continue" to="." method="_on_continue_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/ButtonsContainer/Buttons/Settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/ButtonsContainer/Buttons/Quit" to="." method="_on_quit_button_up"]
